--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-validation": "^3.0.7",
     "thunk": "0.0.1",
     "web-vitals": "^1.0.1"
   },
