--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-validation": "^3.0.7",
+    "redux-devtools-extension": "^2.13.9",
     "thunk": "0.0.1",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
