--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "no-shadow": "off",
+    "jsx-a11y/label-has-for": 0,
     "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
   },
   "ignorePatterns": [
