--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/eslint-parser": "^7.14.7",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
