--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "eslint-config-airbnb-base": "^14.2.1",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -57,7 +58,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
-    "eslint": "^7.2.0",
+    "eslint": "^7.30.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.22.1",
