--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-markdown": "^2.2.0",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
