--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.0.2",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-markdown": "^2.2.0",
+    "g": "^2.0.1",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -28,6 +29,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "serve": "^12.0.0",
     "thunk": "0.0.1",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
@@ -62,9 +64,9 @@
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
