--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "airbnb": "0.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb": "18.2.1",
     "eslint-plugin-markdown": "^2.2.0",
     "g": "^2.0.1",
     "history": "^5.0.0",
@@ -61,12 +62,13 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb": "18.2.1",
+    "chokidar-socket-emitter": "^0.6.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
