--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "eslint-plugin-markdown": "^2.2.0",
     "g": "^2.0.1",
     "history": "^5.0.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-datepicker": "^4.1.1",
+    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.6.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
     "react-validation": "^3.0.7",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
@@ -63,6 +67,8 @@
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.14.7",
     "chokidar-socket-emitter": "^0.6.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-babel": "^5.3.1",
